--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin - library</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="append">
+        <input id="bookname" type="text" placeholder="Book title">
+        <button id="insert-book" onclick="appendBook()">Insert</button>
+    </div>
+    <div id="bookshelf" class="bookshelf">
+        
+    </div>
 </body>
 </html>
