Finished the code to append the books

--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
     <div id="bookshelf" class="bookshelf">
         
     </div>
+
+    <script src="script.js">
+
+    </script>
 </body>
 </html>
