Added the feature to input authors name

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="append">
         <input id="bookname" type="text" placeholder="Book title">
+        <input id="bookauthor" type="text" placeholder="Author">
         <button id="insert-book" onclick="appendBook()">Insert</button>
     </div>
     <div id="bookshelf" class="bookshelf">
